--- a/PortalSocios/PortalSocios/Views/Socios/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalhes do sócio</h2>
 
 <div>
-    <h4>Socios</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -109,6 +108,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.SocioID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.SocioID }) |
+    @Html.ActionLink("Voltar à lista", "Index")
 </p>
