Adição dos restantes controllers + modificações no CSS da tabela 'Socios'.

--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Portal dos Sócios</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.rcarrao.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
@@ -25,9 +25,10 @@
             </div>
         </div>
     </div>
-
-    <div class="container body-content">
+    <div class="container">
         @RenderBody()
+    </div>
+    <div class="container">        
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Clube Desportivo Coxos da Bola</p>
