--- a/PortalSocios/PortalSocios/Views/Quotas/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Index.cshtml
@@ -7,7 +7,7 @@
 <h3>Lista de Quotas</h3>
 
 <p>
-    @Html.ActionLink("Criar Nova Quota", "Create")
+    @Html.ActionLink("Criar nova quota", "Create")
 </p>
 <table class="table table-striped">
     <tr>
