--- a/PortalSocios/PortalSocios/Views/Socios/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Index.cshtml
@@ -7,7 +7,7 @@
 <h3>Lista de Sócios</h3>
 
 <p>
-    @Html.ActionLink("Adicionar novo sócio", "Create")
+    @Html.ActionLink("Criar novo sócio", "Create")
 </p>
 <div style="overflow-x: auto;">
     <table class="table table-striped">
