--- a/PortalSocios/PortalSocios/Views/Categorias/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/Categorias/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h3>Detalhes da Categoria</h3>
 
 <div>
-    <h4>Categorias</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,6 +44,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CategoriaID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar à lista", "Index") |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.CategoriaID })    
 </p>
