--- a/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h3>Eliminar Funcionário</h3>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Funcionarios</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,12 +59,14 @@
 
     </dl>
 
+    <h4>Tem a certeza de que pretende eliminar este funcionário?</h4>
+
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Voltar à lista", "Index") |
+            <input type="submit" value="Sim" class="btn btn-danger" />            
         </div>
     }
 </div>
