--- a/PortalSocios/PortalSocios/Views/Pagamentos/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h3>Criar Novo Pagamento</h3>
 
 
 @using (Html.BeginForm()) 
@@ -12,11 +12,19 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Pagamentos</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
-            @Html.LabelFor(model => model.RefMultibanco, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SocioFK, "Sócio", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("SocioFK", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.SocioFK, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.RefMultibanco, htmlAttributes: new { @class = "control-label col-md-2", @maxlength = "9" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RefMultibanco, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RefMultibanco, "", new { @class = "text-danger" })
@@ -26,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Montante, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Montante, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Montante, new { htmlAttributes = new { @class = "form-control", @maxlength = "7" } })
                 @Html.ValidationMessageFor(model => model.Montante, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,7 +42,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataPagam, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataPagam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DataPagam, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
                 @Html.ValidationMessageFor(model => model.DataPagam, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataPrevPagam, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataPrevPagam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DataPrevPagam, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
                 @Html.ValidationMessageFor(model => model.DataPrevPagam, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,29 +58,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Multa, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Multa, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Multa, new { htmlAttributes = new { @class = "form-control", @maxlength = "7" } })
                 @Html.ValidationMessageFor(model => model.Multa, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.QuotaFK, "QuotaFK", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.QuotaFK, "Periodicidade", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("QuotaFK", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.QuotaFK, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
         <div class="form-group">
-            @Html.LabelFor(model => model.SocioFK, "SocioFK", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("SocioFK", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.SocioFK, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FuncionarioFK, "FuncionarioFK", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FuncionarioFK, "Funcionário", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("FuncionarioFK", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FuncionarioFK, "", new { @class = "text-danger" })
@@ -81,16 +81,16 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Criar" class="btn btn-danger" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar à lista", "Index")
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.rcarrao.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
