--- a/PortalSocios/PortalSocios/Views/Pagamentos/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Delete.cshtml
@@ -4,28 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h3>Eliminar Pagamento</h3>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Pagamentos</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Funcionario.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Funcionario.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Quota.Periodicidade)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Quota.Periodicidade)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Socio.Nome)
@@ -75,14 +58,32 @@
             @Html.DisplayFor(model => model.Multa)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Quota.Periodicidade)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Quota.Periodicidade)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Funcionario.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Funcionario.Nome)
+        </dd>
+
     </dl>
+
+    <h4>Tem a certeza de que pretende eliminar este pagamento?</h4>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+        <div class="form-actions no-color">            
+            @Html.ActionLink("Voltar à lista", "Index") |
+            <input type="submit" value="Sim" class="btn btn-danger" />
         </div>
     }
 </div>
