--- a/PortalSocios/PortalSocios/Views/Pagamentos/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h3>Detalhes do Pagamento</h3>
 
 <div>
-    <h4>Pagamentos</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -77,6 +76,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.PagamentoID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar à lista", "Index") |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.PagamentoID })    
 </p>
