--- a/PortalSocios/PortalSocios/Views/Quotas/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h3>Detalhes da Quota</h3>
 
 <div>
-    <h4>Quotas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -44,7 +43,7 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.QuotaID }) |
-    @Html.ActionLink("Back to List", "Index")
+<p>    
+    @Html.ActionLink("Voltar à lista", "Index") |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.QuotaID })
 </p>
