--- a/PortalSocios/PortalSocios/Views/Socios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Delete.cshtml
@@ -6,18 +6,9 @@
 
 <h3>Eliminar Sócio</h3>
 
-<h4>Tem a certeza que deseja eliminar este sócio?</h4>
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Categoria.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Categoria.Nome)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.NumSocio)
         </dt>
@@ -106,14 +97,24 @@
             @Html.DisplayFor(model => model.DataInscr)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Categoria.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Categoria.Nome)
+        </dd>
+
     </dl>
+    
+    <h4>Tem a certeza de que pretende eliminar este sócio?</h4>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            @Html.ActionLink("Voltar à lista", "Index") |
-            <input type="submit" value="Sim" class="btn btn-danger" />
+            @Html.ActionLink("Voltar à lista", "Index") |         
+            <input type="submit" value="Sim" class="btn btn-danger" />            
         </div>
     }
 </div>
