Implementação de validações.

--- a/PortalSocios/PortalSocios/Views/Quotas/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Delete.cshtml
@@ -18,6 +18,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Referencia)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Referencia)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Montante)
         </dt>
 
