--- a/PortalSocios/PortalSocios/Views/Socios/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayNameFor(model => model.DataInscr)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Categoria.Nome)
+                @Html.DisplayName("Categoria")
             </th>
             <th></th>
         </tr>
