--- a/PortalSocios/PortalSocios/Views/Beneficios/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Beneficios/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", @maxlength = "255" } })
+                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", @maxlength = "100" } })
                 @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,5 +43,5 @@
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.rcarrao.js"></script>
+<script src="~/Scripts/jquery.validate.min.rcarrao.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
