--- a/PortalSocios/PortalSocios/Views/Categorias/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Categorias/Create.cshtml
@@ -59,5 +59,5 @@
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.rcarrao.js"></script>
+<script src="~/Scripts/jquery.validate.min.rcarrao.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
