--- a/PortalSocios/PortalSocios/Views/Quotas/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Create.cshtml
@@ -6,26 +6,24 @@
 
 <h3>Criar Nova Quota</h3>
 
-
-@using (Html.BeginForm()) 
-{
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Referencia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoriaFK, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control", @min = "1" } })
+                @Html.ValidationMessageFor(model => model.Referencia, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Montante, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Montante, new { htmlAttributes = new { @class = "form-control", @maxlength = "7" } })
+                @Html.EditorFor(model => model.Montante, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
                 @Html.ValidationMessageFor(model => model.Montante, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -33,7 +31,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Ano, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Ano, new { htmlAttributes = new { @class = "form-control", @min = "2017" } })
+                @Html.EditorFor(model => model.Ano, new { htmlAttributes = new { @class = "form-control", @min = "2017", @max = "2500" } })
                 @Html.ValidationMessageFor(model => model.Ano, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,6 +41,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Periodicidade, new { htmlAttributes = new { @class = "form-control", @maxlength = "15" } })
                 @Html.ValidationMessageFor(model => model.Periodicidade, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CategoriaFK, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -58,3 +64,6 @@
     @Html.ActionLink("Voltar à lista", "Index")
 </div>
 
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<!-- <script src="~/Scripts/jquery.validate.min.rcarrao.js"></script> -->
+<!-- <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script> -->
