--- a/PortalSocios/PortalSocios/Views/Quotas/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Edit.cshtml
@@ -17,17 +17,17 @@
         @Html.HiddenFor(model => model.QuotaID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Referencia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoriaFK, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control", @min = "1" } })
+                @Html.ValidationMessageFor(model => model.Referencia, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Montante, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Montante, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Montante, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
                 @Html.ValidationMessageFor(model => model.Montante, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Ano, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Ano, new { htmlAttributes = new { @class = "form-control", @min = "2017" } })
+                @Html.EditorFor(model => model.Ano, new { htmlAttributes = new { @class = "form-control", @min = "2017", @max = "2500" } })
                 @Html.ValidationMessageFor(model => model.Ano, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,6 +45,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Periodicidade, new { htmlAttributes = new { @class = "form-control", @maxlength = "15" } })
                 @Html.ValidationMessageFor(model => model.Periodicidade, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CategoriaFK, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -59,3 +67,7 @@
 <div>
     @Html.ActionLink("Voltar à lista", "Index")
 </div>
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<!-- <script src="~/Scripts/jquery.validate.min.rcarrao.js"></script> -->
+<!-- <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script> -->
