--- a/PortalSocios/PortalSocios/Views/Pagamentos/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Delete.cshtml
@@ -59,11 +59,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Quota.Periodicidade)
+            @Html.DisplayNameFor(model => model.Quota.Referencia)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Quota.Periodicidade)
+            @Html.DisplayFor(model => model.Quota.Referencia)
         </dd>
 
         <dt>
