--- a/PortalSocios/PortalSocios/Views/Pagamentos/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Details.cshtml
@@ -10,22 +10,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Funcionario.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Funcionario.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Quota.Periodicidade)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Quota.Periodicidade)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Socio.Nome)
         </dt>
 
@@ -71,6 +55,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.Multa)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Quota.Referencia)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Quota.Referencia)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Funcionario.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Funcionario.Nome)
         </dd>
 
     </dl>
