--- a/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayNameFor(model => model.Multa)
         </th>
         <th>
-            @Html.DisplayName("Quota")
+            Ref. Quota
         </th>
         <th>
-            @Html.DisplayName("Funcionário")
+            Funcionário
         </th>
         <th></th>
     </tr>
