--- a/PortalSocios/PortalSocios/Views/Categorias/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Categorias/Edit.cshtml
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.NumQuotasAnuais, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NumQuotasAnuais, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.NumQuotasAnuais, new { htmlAttributes = new { @class = "form-control", @min = "1", @max = "12" } })
                 @Html.ValidationMessageFor(model => model.NumQuotasAnuais, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ValorMensal, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorMensal, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ValorMensal, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
                 @Html.ValidationMessageFor(model => model.ValorMensal, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -61,5 +61,5 @@
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.rcarrao.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
