--- a/PortalSocios/PortalSocios/Views/Quotas/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Edit.cshtml
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Referencia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control", @min = "1" } })
+                @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control", @min = "1", @max = "999999999" } })
                 @Html.ValidationMessageFor(model => model.Referencia, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -69,5 +69,5 @@
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<!-- <script src="~/Scripts/jquery.validate.min.rcarrao.js"></script> -->
-<!-- <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script> -->
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
