--- a/PortalSocios/PortalSocios/Views/Quotas/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Index.cshtml
@@ -12,9 +12,6 @@
 <table class="table table-striped">
     <tr>
         <th>
-            @Html.DisplayName("Categoria")
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Referencia)
         </th>
         <th>
@@ -26,14 +23,14 @@
         <th>
             @Html.DisplayNameFor(model => model.Periodicidade)
         </th>
+        <th>
+            Categoria
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Categoria.Nome)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Referencia)
         </td>
@@ -45,6 +42,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Periodicidade)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Categoria.Nome)
         </td>
         <td>
             @Html.ActionLink("Editar", "Edit", new { id=item.QuotaID }) |
