--- a/PortalSocios/PortalSocios/Views/Socios/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Create.cshtml
@@ -49,7 +49,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataNasc, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataNasc, new { htmlAttributes = new { @class = "form-control", data_val_date = "Introduza uma data de nascimento no formato aaaa/mm/dd." } })
+                @Html.EditorFor(model => model.DataNasc, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DataNasc, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -97,7 +97,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataInscr, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataInscr, new { htmlAttributes = new { @class = "form-control", data_val_date = "Introduza uma data de inscrição no formato aaaa/mm/dd" } })
+                @Html.EditorFor(model => model.DataInscr, new { htmlAttributes = new { @class = "form-control", data_val_date = "Introduza uma data no formato aaaa/mm/dd" } })
                 @Html.ValidationMessageFor(model => model.DataInscr, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -123,5 +123,5 @@
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.rcarrao.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
