--- a/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
@@ -51,7 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataNasc, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataNasc, new { htmlAttributes = new { @class = "form-control", data_val_date = "Introduza uma data de nascimento no formato aaaa/mm/dd." } })
+                @Html.EditorFor(model => model.DataNasc, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DataNasc, "", new { @class = "text-danger" })
             </div>
         </div>
